---
source: src/lib.rs
expression: "Lexer::new(\"\\\"foo\\\" + 12.4\").filter_map(|x|\n                                            x.ok()).map(|(_, x, _)|\n                                                            match x {\n                                                                Token::Ident(x)\n                                                                |\n                                                                Token::NumLit(x)\n                                                                |\n                                                                Token::StrLit(x)\n                                                                =>\n                                                                format!(\"{}\",\n                                                                        x),\n                                                                x =>\n                                                                format!(\"{}\",\n                                                                        x),\n                                                            }).collect::<Vec<_>>()"

---
[
    "\"foo\"",
    "+",
    "12.4",
]
